--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ APP_NAME=template_app_sf # On change, change makefile (DOCKER_APP var)
 APP_ENV=dev # dev, prod
 APP_PORT=8000
 # Web server
-WEB_HTTP_SERVER_PORT=8080
+WEB_HTTP_SERVER_PORT=8080 # On change, change makefile (WEB_HTTP_SERVER_PORT var)
